# BIEVR-LIO

./: README.md
.github/workflows/: build_20_04  build_20_04.yaml
BIEVR/: CMakeLists.txt  package.xml
BIEVR/cmake/: bievr_lioConfig.cmake.in
BIEVR/include/bievr_lio/: bievr_map.h  common.h  config_loader.h  imu_integrator.h  inertial_factor.h  log++.h  ls_optimizer.h  pipeline.h  preprocess.h  prior_factor.h  synchronizer.h  timing.h  undistort.h  utils.h
BIEVR/src/: bievr_map.cpp  common.cpp  imu_integrator.cpp  inertial_factor.cpp  ls_optimizer.cpp  pipeline.cpp  preprocess.cpp  prior_factor.cpp  synchronizer.cpp  timing.cpp  undistort.cpp  utils.cpp
config/: bievr_ascii.txt  params.yaml
config/sensor_configs/: enwide.yaml  gamma.yaml  grandtour.yaml  mars.yaml  ncd.yaml
docker/: Dockerfile_ros1  Dockerfile_ros2  run_docker_ros1.sh  run_docker_ros2.sh
docker/scripts/: build_ros1.sh  build_ros2.sh  install_ceres.sh  install_deps_ros2.sh
interfaces/ros1/: CMakeLists.txt  package.xml
interfaces/ros1/include/bievr_lio_ros/: publisher.h
interfaces/ros1/launch/: process_bag.launch  process_topics.launch
interfaces/ros1/rviz/: config.rviz
interfaces/ros1/src/: process_bag.cpp  process_topics.cpp
interfaces/ros2/: CMakeLists.txt  package.xml
interfaces/ros2/include/bievr_lio_ros2/: output_manager.h  publisher.h  self_filter.h
interfaces/ros2/launch/: process_bag.launch.py  process_topics.launch.py
interfaces/ros2/rviz/: config.rviz
interfaces/ros2/src/: process_bag.cpp  process_topics.cpp
interfaces/ros_common/: CMakeLists.txt  package.xml
interfaces/ros_common/cmake/: bievr_ros_commonConfig.cmake.in
interfaces/ros_common/include/bievr_ros_common/: conversions.h  publisher_base.h
