<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bievr_lio_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 (ament_cmake) interface for the BIEVR-LIO library.</description>

  <maintainer email="patrick.pfreundschuh@ethz-asl.ch">paddy</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>bievr_lio</depend>
  <depend>bievr_ros_common</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>

  <!-- Optional visualization: launched only when rviz:=true -->
  <exec_depend>rviz2</exec_depend>

  <!-- Optional: only built if livox_ros_driver2 is available -->
  <exec_depend>livox_ros_driver2</exec_depend>
  <build_depend>livox_ros_driver2</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
